Implement Auto Grading Logic (#87)
